--- a/WebsiteBanHangCongNghe/Views/Shared/_PartialMenu.cshtml
+++ b/WebsiteBanHangCongNghe/Views/Shared/_PartialMenu.cshtml
@@ -1,4 +1,21 @@
 ﻿<div class="header-bottom">
+	<style>
+		.search_box input {
+			background: #F0F0E9;
+			border: medium none;
+			color: #B2B2B2;
+			font-family: 'roboto';
+			font-size: 12px;
+			font-weight: 300;
+			height: 36px;
+			outline: medium none;
+			padding-left: 10px;
+			width: 330px;
+			background-image: url(../images/home/searchicon.png);
+			background-repeat: no-repeat;
+			background-position: 300px;
+		}
+	</style>
 	<!--header-bottom-->
 	<div class="container">
 		<div class="row">
@@ -13,12 +30,11 @@
 				</div>
 				<div class="mainmenu pull-left">
 					<ul class="nav navbar-nav collapse navbar-collapse">
-						<li><a href="index.html" class="active">Home</a></li>
+						<li><a asp-controller="Home" asp-action="Index" class="active">Home</a></li>
 						<li class="dropdown">
 							<a href="#">Shop<i class="fa fa-angle-down"></i></a>
 							<ul role="menu" class="sub-menu">
-								<li><a href="shop.html">Products</a></li>
-								<li><a href="product-details.html">Product Details</a></li>
+								<li><a asp-controller="Product" asp-action="Index">Products</a></li>
 								<li><a href="checkout.html">Checkout</a></li>
 								<li><a href="cart.html">Cart</a></li>
 								<li><a href="login.html">Login</a></li>
@@ -31,16 +47,12 @@
 								<li><a href="blog-single.html">Blog Single</a></li>
 							</ul>
 						</li>
-						<li><a href="404.html">404</a></li>
+						
 						<li><a href="contact-us.html">Contact</a></li>
 					</ul>
 				</div>
 			</div>
-			<div class="col-sm-3">
-				<div class="search_box pull-right">
-					<input type="text" placeholder="Search" />
-				</div>
-			</div>
+			@await Html.PartialAsync("_SearchPanel")
 		</div>
 	</div>
 </div><!--/header-bottom-->
