--- a/WebsiteBanHangCongNghe/Views/Cart/Index.cshtml
+++ b/WebsiteBanHangCongNghe/Views/Cart/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<WebsiteBanHangCongNghe.ViewModel.CartItem>
+﻿
+@model IEnumerable<WebsiteBanHangCongNghe.ViewModel.CartItem>
 @{
 	ViewData["Hide"] = true; // Set HideNavbar to true to hide the ViewComponent
 }
@@ -70,7 +71,7 @@
 								<p class="cart_total_price">@item.Total.ToString("N0") VNĐ</p>
 							</td>
 							<td class="cart_delete">
-								<a class="cart_quantity_delete" href=""><i class="fa fa-times"></i></a>
+								<a class="cart_quantity_delete" asp-action="RemoveCart" asp-controller="Cart" asp-route-id="@item.ProductId"><i class="fa fa-times"></i></a>
 							</td>
 						</tr>
 					}
@@ -86,71 +87,15 @@
 <section id="do_action">
 	<div class="container">
 		<div class="heading">
-			<h3>What would you like to do next?</h3>
-			<p>Choose if you have a discount code or reward points you want to use or would like to estimate your delivery cost.</p>
+			<h1>Order information</h1>
 		</div>
 		<div class="row">
 			<div class="col-sm-6">
-				<div class="chose_area">
-					<ul class="user_option">
-						<li>
-							<input type="checkbox">
-							<label>Use Coupon Code</label>
-						</li>
-						<li>
-							<input type="checkbox">
-							<label>Use Gift Voucher</label>
-						</li>
-						<li>
-							<input type="checkbox">
-							<label>Estimate Shipping &amp; Taxes</label>
-						</li>
-					</ul>
-					<ul class="user_info">
-						<li class="single_field">
-							<label>Country:</label>
-							<select>
-								<option>United States</option>
-								<option>Bangladesh</option>
-								<option>UK</option>
-								<option>India</option>
-								<option>Pakistan</option>
-								<option>Ucrane</option>
-								<option>Canada</option>
-								<option>Dubai</option>
-							</select>
-
-						</li>
-						<li class="single_field">
-							<label>Region / State:</label>
-							<select>
-								<option>Select</option>
-								<option>Dhaka</option>
-								<option>London</option>
-								<option>Dillih</option>
-								<option>Lahore</option>
-								<option>Alaska</option>
-								<option>Canada</option>
-								<option>Dubai</option>
-							</select>
-
-						</li>
-						<li class="single_field zip-field">
-							<label>Zip Code:</label>
-							<input type="text">
-						</li>
-					</ul>
-					<a class="btn btn-default update" href="">Get Quotes</a>
-					<a class="btn btn-default check_out" href="">Continue</a>
-				</div>
-			</div>
-			<div class="col-sm-6">
 				<div class="total_area">
 					<ul>
-						<li>Cart Sub Total <span>$59</span></li>
-						<li>Eco Tax <span>$2</span></li>
+						<li>Cart Sub Total <span>@Model.Sum(p => p.Total).ToString("N0") VNĐ</span></li>
 						<li>Shipping Cost <span>Free</span></li>
-						<li>Total <span>$61</span></li>
+						<li>Total <span>@Model.Sum(p => p.Total).ToString("N0") VNĐ</span></li>
 					</ul>
 					<a class="btn btn-default update" href="">Update</a>
 					<a class="btn btn-default check_out" href="">Check Out</a>
