Done Login Logout, quantity in cart

--- a/WebsiteBanHangCongNghe/Views/Shared/_PartialBanner.cshtml
+++ b/WebsiteBanHangCongNghe/Views/Shared/_PartialBanner.cshtml
@@ -1,8 +1,10 @@
 ﻿
 <section id="slider">
     <style>
+      
+
         img.girl.img-responsive {
-            height: auto;
+            height: 400px;
             width: auto;
         }
     </style>
