--- a/WebsiteBanHangCongNghe/Views/Shared/_PartialHeader.cshtml
+++ b/WebsiteBanHangCongNghe/Views/Shared/_PartialHeader.cshtml
@@ -12,12 +12,21 @@
 			<div class="col-sm-8">
 				<div class="shop-menu pull-right">
 					<ul class="nav navbar-nav">
-						<li><a href="#"><i class="fa fa-user"></i> Account</a></li>
-						<li><a href="#"><i class="fa fa-star"></i> Wishlist</a></li>
-						<li><a href="checkout.html"><i class="fa fa-crosshairs"></i> Checkout</a></li>
+						@if (User.Identity.IsAuthenticated)
+						{
+							<li><a href="#"><i class="fa fa-user"></i>Welcome @User.Identity.Name </a></li>
+							<li><a href="checkout.html"><i class="fa fa-crosshairs"></i> Checkout</a></li>
+							@await Component.InvokeAsync("Cart")
+							<li><a asp-action="Logout" asp-controller="Access" ><i class="fa fa-lock"></i> Logout</a></li>
+						}
+						else
+						{
+							<li><a href="#"><i class="fa fa-user"></i> </a></li>
+							<li><a href="checkout.html"><i class="fa fa-crosshairs"></i> Checkout</a></li>
+							<li><a href="cart.html"><i class="fa fa-shopping-cart"></i> Cart</a></li>
+							<li><a asp-action="Login" asp-controller="Access"><i class="fa fa-lock"></i> Login</a></li>
+						}
 
-						<li><a href="cart.html"><i class="fa fa-shopping-cart"></i> Cart</a></li>
-						<li><a href="login.html"><i class="fa fa-lock"></i> Login</a></li>
 					</ul>
 				</div>
 			</div>
