--- a/WebsiteBanHangCongNghe/Views/Shared/_PartialMenu.cshtml
+++ b/WebsiteBanHangCongNghe/Views/Shared/_PartialMenu.cshtml
@@ -36,8 +36,8 @@
 							<ul role="menu" class="sub-menu">
 								<li><a asp-controller="Product" asp-action="Index">Products</a></li>
 								<li><a href="checkout.html">Checkout</a></li>
-								<li><a href="cart.html">Cart</a></li>
-								<li><a href="login.html">Login</a></li>
+								<li><a a asp-action="Index" asp-controller="Cart">Cart</a></li>
+								<li><a asp-action="Login" asp-controller="Access">Login</a></li>
 							</ul>
 						</li>
 						<li class="dropdown">
@@ -48,7 +48,7 @@
 							</ul>
 						</li>
 						
-						<li><a href="contact-us.html">Contact</a></li>
+						<li><a asp-action="Register" asp-controller="Access">Sign up</a></li>
 					</ul>
 				</div>
 			</div>
