--- a/WebsiteBanHangCongNghe/Views/Shared/_PartialBanner.cshtml
+++ b/WebsiteBanHangCongNghe/Views/Shared/_PartialBanner.cshtml
@@ -4,8 +4,8 @@
       
 
         img.girl.img-responsive {
-            height: 400px;
-            width: auto;
+            height: 300px;
+            width: 1000px;
         }
     </style>
     <!--slider-->
