--- a/WebsiteBanHangCongNghe/Views/Shared/_PartialHeader.cshtml
+++ b/WebsiteBanHangCongNghe/Views/Shared/_PartialHeader.cshtml
@@ -22,8 +22,8 @@
 						else
 						{
 							<li><a href="#"><i class="fa fa-user"></i> </a></li>
-							<li><a href="checkout.html"><i class="fa fa-crosshairs"></i> Checkout</a></li>
-							<li><a href="cart.html"><i class="fa fa-shopping-cart"></i> Cart</a></li>
+							<li><a asp-action="CheckOut" asp-controller="Cart"><i class="fa fa-crosshairs"></i> Checkout</a></li>
+							<li><a asp-action="Index" asp-controller="Cart"><i class="fa fa-shopping-cart"></i> Cart</a></li>
 							<li><a asp-action="Login" asp-controller="Access"><i class="fa fa-lock"></i> Login</a></li>
 						}
 
