--- a/WebsiteBanHangCongNghe/Views/Shared/_PartialMenu.cshtml
+++ b/WebsiteBanHangCongNghe/Views/Shared/_PartialMenu.cshtml
@@ -35,8 +35,8 @@
 							<a href="#">Shop<i class="fa fa-angle-down"></i></a>
 							<ul role="menu" class="sub-menu">
 								<li><a asp-controller="Product" asp-action="Index">Products</a></li>
-								<li><a href="checkout.html">Checkout</a></li>
-								<li><a a asp-action="Index" asp-controller="Cart">Cart</a></li>
+								<li><a asp-action="CheckOut" asp-controller="Cart">Checkout</a></li>
+								<li><a  asp-action="Index" asp-controller="Cart">Cart</a></li>
 								<li><a asp-action="Login" asp-controller="Access">Login</a></li>
 							</ul>
 						</li>
