--- a/WebsiteBanHangCongNghe/Areas/Admin/Views/Product/Index.cshtml
+++ b/WebsiteBanHangCongNghe/Areas/Admin/Views/Product/Index.cshtml
@@ -1,78 +1,82 @@
-﻿@using X.PagedList.Mvc.Core;
-@model X.PagedList.IPagedList<WebsiteBanHangCongNghe.Data.Product>
+﻿    @using X.PagedList.Mvc.Core;
+    @model X.PagedList.IPagedList<WebsiteBanHangCongNghe.Data.Product>
 
-@{
-    ViewData["Title"] = "Index";
-    Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
-}
-@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-<h1>Index</h1>
+    @{
+        ViewData["Title"] = "Index";
+        Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
+    }
 
-<p>
-    <a class="btn btn-success btn-sm"  asp-controller="Product" asp-action="Create">Create New</a>
-</p>
-<table class="table ">
-    <thead>
-        <tr class="table-warning">
-            <th>
-               Name
-            </th>
-          
-            <th>
-                Price
-            </th>
-            <th>
-                Image
-            </th>
-            <th>
-               BrandName
-            </th>
-            <th>
-                CategoryName
-            </th>
-            <th>
-                Instock
-            </th>
-            <th>Action</th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr class="table-success">
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-           
-           
-            <td>
-                    @item.Price.ToString("N0") VNĐ
-            </td>
-            <td>
-                    <img src="~/imgs/Images/Product/@item.Imgs" width="300px" />
-            </td>
-     
-            <td>
-                @Html.DisplayFor(modelItem => item.Brand.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Category.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Instock.Name)
-            </td>
-            <td>
-                    <a class="btn btn-warning btn-sm"  asp-controller="Product" asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                    <a class="btn btn-danger btn-sm" asp-controller="Product" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-           
-}
-    </tbody>
-    
-</table>
-@Html.PagedListPager(Model, page => Url.Action("Index", new { page = page }), new X.PagedList.Web.Common.PagedListRenderOptions()
-{
-    LiElementClasses = new List<String> {"page-item"},
-    PageClasses = new List<String>{"page-link"}
-})
+    <h1>Danh mục sản phẩm</h1>
+<p>Tổng số lượng sản phẩm: @ViewBag.TotalProducts</p>
 
+    <p>
+        <a class="btn btn-success btn-sm" asp-controller="Product" asp-action="Create">Create New</a>
+    </p>
+
+    @using (Html.BeginForm("Index", "Product", FormMethod.Get))
+    {
+        <div class="form-group">
+            <label for="categoryId">Category:</label>
+            @Html.DropDownList("categoryId", ViewBag.Categories as SelectList, "All", new { @class = "form-control" })
+        </div>
+
+        <div class="form-group">
+            <label for="brandId">Brand:</label>
+            @Html.DropDownList("brandId", ViewBag.Brands as SelectList, "All", new { @class = "form-control" })
+        </div>
+
+        <button type="submit" class="btn btn-primary">Filter</button>
+    }
+
+    <table class="table">
+        <thead>
+            <tr class="table-warning">
+                <th>Name</th>
+                <th>Price</th>
+                <th>Image</th>
+                <th>BrandName</th>
+                <th>CategoryName</th>
+                <th>Instock</th>
+                <th>Action</th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
+            {
+                <tr class="table-success">
+                    <input type="hidden" name="Id" value="@item.Id" />|
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Name)
+                    </td>
+
+                    <td>
+                        @item.Price.ToString("N0") VNĐ
+                    </td>
+                    <td>
+                        <img src="~/imgs/Images/Product/@item.Imgs" width="300px" />
+                    </td>
+
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Brand.Name)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Category.Name)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Instock.Name)
+                    </td>
+                    <td>
+                        <a asp-action="Edit" asp-controller="Product" class="btn btn-warning btn-sm" asp-route-id="@item.Id">Edit</a>
+
+                        <a class="btn btn-danger btn-sm" asp-controller="Product" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+
+    @Html.PagedListPager(Model, page => Url.Action("Index", new { page = page }), new X.PagedList.Web.Common.PagedListRenderOptions()
+    {
+        LiElementClasses = new List<String> { "page-item" },
+        PageClasses = new List<String> { "page-link" }
+    })
