Done category, search product in admin, instock product, display brand

--- a/WebsiteBanHangCongNghe/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
+++ b/WebsiteBanHangCongNghe/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
@@ -225,7 +225,20 @@
                         </a>
                         <div class="collapse" id="ui-basic1">
                             <ul class="nav flex-column sub-menu">
-                                <li class="nav-item"> <a class="nav-link" asp-area="Admin" asp-controller="Product">Danh mục loại sản phẩm</a></li>
+                                <li class="nav-item"> <a class="nav-link" asp-area="Admin" asp-controller="Category">Danh mục loại sản phẩm</a></li>
+
+                            </ul>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" data-bs-toggle="collapse" href="#ui-basic2" aria-expanded="false" aria-controls="ui-basic">
+                            <span class="menu-title">Quản lý thương hiệu</span>
+                            <i class="menu-arrow"></i>
+                            <i class="mdi mdi-crosshairs-gps menu-icon"></i>
+                        </a>
+                        <div class="collapse" id="ui-basic2">
+                            <ul class="nav flex-column sub-menu">
+                                <li class="nav-item"> <a class="nav-link" asp-area="Admin" asp-controller="Brand">Danh mục thương hiệu</a></li>
 
                             </ul>
                         </div>
