--- a/WebsiteBanHangCongNghe/Areas/Admin/Views/Product/Index.cshtml
+++ b/WebsiteBanHangCongNghe/Areas/Admin/Views/Product/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿    @using X.PagedList.Mvc.Core;
     @model X.PagedList.IPagedList<WebsiteBanHangCongNghe.Data.Product>
-
+    @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
     @{
         ViewData["Title"] = "Index";
         Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
@@ -15,15 +15,20 @@
 
     @using (Html.BeginForm("Index", "Product", FormMethod.Get))
     {
+        <div class="form-group" style="width: 40%;">
+            <label for="search">Search:</label>
+        <input type="text" id="search" name="search" class="form-control" placeholder="Enter keyword" value="@ViewBag.Search">
+        </div>
         <div class="form-group">
             <label for="categoryId">Category:</label>
-            @Html.DropDownList("categoryId", ViewBag.Categories as SelectList, "All", new { @class = "form-control" })
+            @Html.DropDownList("categoryId", ViewBag.Categories as SelectList, "All", new { @class = "form-control",style ="width: 40%;"  })
         </div>
 
         <div class="form-group">
             <label for="brandId">Brand:</label>
-            @Html.DropDownList("brandId", ViewBag.Brands as SelectList, "All", new { @class = "form-control" })
+        @Html.DropDownList("brandId", ViewBag.Brands as SelectList, "All", new { @class = "form-control", style = "width: 40%;" })
         </div>
+   
 
         <button type="submit" class="btn btn-primary">Filter</button>
     }
